fixed more layout issues

--- a/public/css/loginhb.css
+++ b/public/css/loginhb.css
@@ -1,3 +1,20 @@
+/* Will be applied across all documents with the same id or element*/
+
+main {
+  flex: 1;
+}
+
+/* main handlebars css */
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+/* login handlebars css*/
 
 .row.valign-wrapper {
     display: flex;
@@ -28,3 +45,4 @@
 
   #update-bucketlistitem-item {
 color: black !important;  }
+
